syntax = "proto3";

option go_package = "./";

service VideoService {
  rpc UploadVideo (UploadVideoRequest) returns (UploadVideoResponse);
  rpc UploadCallback (UploadCallbackRequest) returns (UploadCallbackResponse);
  rpc GetVideoMetadata (GetVideoMetadataRequest) returns (GetVideoMetadataResponse);
  rpc ListVideos (ListVideosRequest) returns (ListVideosResponse);
}

message UploadVideoRequest {
  string title = 1;
  string description = 2;
  string category = 5;
  bool is_premium = 6;
}

message UploadVideoResponse {
  string video_id = 1;
  string video_signed_url = 2;
  string cover_photo_url = 3;
}

message UploadCallbackRequest {
  string video_id = 1;    // ID of the video
}

message UploadCallbackResponse {
  string message = 1;   
}

message GetVideoMetadataRequest {
  string video_id = 1;
}

message GetVideoMetadataResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string video_url = 4; 
  string cover_photo_url = 5;
  string type = 6;
  string category = 7;
  bool is_premium = 8;
}

message ListVideosRequest {
  string category = 1;
  bool only_premium = 2;
}

message ListVideosResponse {
  repeated GetVideoMetadataResponse videos = 1;
}
